pg_pv/test-deploy/my-ap-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: my-ingress
spec:
  rules:
  - host: my-ingress
    http:
      paths:
      - path: /
        backend:
          serviceName: my-service
          servicePort: 80
